# unelte-financiare

./: Procfile  README.md  app.py  pyproject.toml  requirements.txt
unelte/: tool_break_even_total.py  tool_buffer.py  tool_cashflow.py  tool_marja.py  tool_prag.py  tool_raport.py  tool_salarii.py  tool_venit.py
